# MoLM

./: pyproject.toml
evalplus_results/humaneval/: Qwen--Qwen2.5-Coder-7B_hf_temp_0.0.jsonl  Qwen--Qwen2.5-Coder-7B_hf_temp_0.0.raw.jsonl
molm/: eval_one_lang.py  humaneval_qwen2_base.py
molm/data/: humaneval-python.jsonl
molm/human_eval/: eval_instruct.py
molm/human_eval/data/: results-qwen-python.jsonl  results-qwen-python.jsonl_results.jsonl
molm/utils/: dataset.py  utils.py
notebooks/: gsm8k.ipynb  humaneval.ipynb  router.ipynb  train_bert.ipynb
notebooks/data/: questions_gen_postgres.csv
