[tool.poetry]
name = "molm"
version = "0.1.0"
description = ""
authors = ["Dheemanth Manur <dmanu006@ucr.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.46.0"
torch = "^2.5.0"
datasets = "^3.0.2"
evaluate = "^0.4.3"
accelerate = "^1.0.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
bitsandbytes = "^0.44.1"
peft = "^0.13.2"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
lm-eval = "^0.4.5"
tiktoken = "^0.8.0"
protobuf = "^5.29.0"
blobfile = "^3.0.0"
sentencepiece = "^0.2.0"
human-eval = "^1.0.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
humaneval = "moelm.human_eval.eval_instruct:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
